--- a/index.html
+++ b/index.html
@@ -6,8 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>스니펫 매니저</title>
   </head>
-  <body>
-    <div class="mt-3 p-4 m">test</div>
-  </body>
+  <body class="bg-slate-950 text-slate-200 font-sans antialiased overflow-hidden">
+  <div id="app" class="h-screen flex flex-col">
+
+    <header class="h-12 border-b border-white/5 bg-slate-900/50 flex items-center justify-between px-6 backdrop-blur-md">
+      <div class="flex items-center gap-4">
+        <span class="text-sky-400 font-black tracking-tighter text-xl">스니펫 매니저</span>
+        <input id="titleInput" type="text" value="Untitled-1.ts"
+               class="bg-transparent border-none outline-none text-sm font-mono text-slate-400 focus:text-white transition-colors">
+      </div>
+      <button id="saveBtn" class="bg-sky-500 hover:bg-sky-400 text-slate-900 px-4 py-1 rounded text-sm font-bold transition-all">
+        SAVE
+      </button>
+    </header>
+
+    <main class="flex-1 flex overflow-hidden">
+      <aside class="w-12 border-r border-white/5 bg-slate-900/30 flex flex-col items-center py-4 gap-4">
+        <div class="w-6 h-6 bg-sky-500/20 rounded flex items-center justify-center text-sky-400 cursor-pointer">TS</div>
+      </aside>
+
+      <section class="flex-1 flex relative bg-slate-950 overflow-hidden">
+        <div id="lineNumbers" class="w-12 pt-5 pr-3 text-right font-mono text-sm leading-relaxed text-slate-700 select-none border-r border-white/5">
+          1
+        </div>
+
+        <div class="flex-1 relative overflow-hidden bg-slate-950">
+          <pre id="highlighting" class="editor-layer absolute inset-0 pointer-events-none overflow-hidden" aria-hidden="true"><code id="highlightingContent" class="language-typescript"></code></pre>
+
+          <textarea id="editor" class="editor-layer absolute inset-0 w-full h-full resize-none spellcheck-false"
+                    placeholder="// 코드를 입력하세요..."></textarea>
+        </div>
+      </section>
+    </main>
+
+    <footer class="h-6 bg-sky-700 flex items-center justify-between px-4 text-[10px] font-bold uppercase tracking-widest text-white/90">
+      <div>Ready</div>
+      <div class="flex gap-4">
+        <span>UTF-8</span>
+        <span>TypeScript</span>
+      </div>
+    </footer>
+
+  </div>
   <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
